corpus/literals.txt
======================
Quoted string literals
======================

"hello world"

---

(source_file
	(string (quoted_string)))

=======================
Percent string literals
=======================

%(parenthesised strings)

%[bracket strings]

%{braced strings}

%<whatever these are called string>

%|and pipe strings|

---

(source_file
	(string (percent_string))
	(string (percent_string))
	(string (percent_string))
	(string (percent_string))
	(string (percent_string)))

================
Integer literals
================

123_456

0b1010101110

0o644_u16

0xFc4d3e

0

---

(source_file
	(integer)
	(integer)
	(integer)
	(integer)
	(integer))

==============
Float literals
==============

0.0

3.14159265

42.0e3f32

---

(source_file
	(float)
	(float)
	(float))

===========
Nil literal
===========

nil

---

(source_file (nil))

================
Boolean literals
================

true
false

---

(source_file (true) (false))
